fix(bpmn-service): fix workflow model audit fields
GH-239
